fix(auth): prevent content shift when checking checkbox

--- a/src/components/Checkbox/Checkbox.module.scss
+++ b/src/components/Checkbox/Checkbox.module.scss
@@ -56,7 +56,7 @@
     align-items: center;
     width: 20px;
     height: 20px;
-    margin: 4px 0;
+    margin: 8px 0;
     vertical-align: middle;
     border-radius: 2px;
     cursor: pointer;
